--- a/src/UI/ImagesSlider/SliderArrows/SliderArrows.module.sass
+++ b/src/UI/ImagesSlider/SliderArrows/SliderArrows.module.sass
@@ -1,3 +1,5 @@
+$arrows_color: #c1c1c1
+
 .leftArrow
   position: absolute
   left: 0
@@ -10,7 +12,7 @@
     position: absolute
     width: 18px
     height: 4px
-    background-color: white
+    background-color: $arrows_color
     transform: rotate(-60deg)
     top: 10px
     opacity: 1
@@ -19,7 +21,7 @@
     position: absolute
     width: 18px
     height: 4px
-    background-color: white
+    background-color: $arrows_color
     transform: rotate(60deg)
     bottom: 10px
 
@@ -35,7 +37,7 @@
     position: absolute
     width: 18px
     height: 4px
-    background-color: white
+    background-color: $arrows_color
     transform: rotate(60deg)
     top: 10px
     opacity: 1
@@ -44,6 +46,6 @@
     position: absolute
     width: 18px
     height: 4px
-    background-color: white
+    background-color: $arrows_color
     transform: rotate(-60deg)
     bottom: 10px
