--- a/src/components/Container/Partition/Arena/Rental/Rental.module.sass
+++ b/src/components/Container/Partition/Arena/Rental/Rental.module.sass
@@ -1,12 +1,18 @@
 .rental
+  position: relative
   width: 100%
 
 .title
-  text-decoration: underline
-  margin: 15px 0
+  display: inline-block
+  background-color: #c1c1c1
+  padding: 0 15px
+  margin-top: 20px
+  border-radius: 20px
+  color: #000000
 
 .rented
   display: flex
 
 .datepicker
   margin: 10px 0
+  background-color: whitesmoke
