--- a/src/components/Container/Navbar/Navbar.module.sass
+++ b/src/components/Container/Navbar/Navbar.module.sass
@@ -1,27 +1,50 @@
 $partition_text_color: whitesmoke
+$background_color: #2e519e
 
 .navbar
+  position: fixed
   display: flex
-  justify-content: center
+  justify-content: space-between
+  padding: 0 20px
   align-items: center
   width: 100%
-  height: 50px
-  list-style-type: none
-  background-color: cornflowerblue
+  height: 65px
+  top: 0
+  background-color: $background_color
+  border-bottom: 2px solid darken($background_color, 20%)
+  z-index: 10000
+  &_list
+    height: 70%
+    display: flex
+    justify-content: center
+    align-items: center
+    list-style-type: none
 
 .nav_item
-  font-size: 13px
+  font-size: 17px
   font-weight: bold
-  -webkit-border-radius: 3px
-  -moz-border-radius: 3px
   margin-right: 10px
+  height: 100%
+  background-color: $background_color
+  transition: all .5s
   &:last-child
     margin-right: unset
+  &:hover
+    background-color: darken($background_color, 20%)
+
+.active
+  background-color: darken($background_color, 20%)
 .nav_link
+  display: flex
+  align-items: center
+  justify-content: center
+  height: 100%
   color: $partition_text_color
-  border-radius: 3px
   border: 1px solid $partition_text_color
-  padding: 5px 10px
+  -webkit-border-radius: 3px
+  -moz-border-radius: 3px
+  border-radius: 3px
+  padding: 0 15px
   text-decoration: none
   &:hover
     color: darken($partition_text_color, 10%)
@@ -30,3 +53,20 @@ $partition_text_color: whitesmoke
 .nav_link.active
   color: darken($partition_text_color, 10%)
   border-color: darken($partition_text_color, 10%)
+
+.sign_in, .sign_up
+  height: 40px
+  background-color: darken($background_color, 10%)
+  border: none
+  margin-right: 10px
+  padding: 0 15px
+  -webkit-border-radius: 5px
+  -moz-border-radius: 5px
+  border-radius: 5px
+  color: $partition_text_color
+  font-size: 15px
+  font-weight: bold
+  cursor: pointer
+  transition: all .3s
+  &:hover
+    background-color: darken($background_color, 20%)
