--- a/src/components/Container/Partition/Arena/Arena.module.sass
+++ b/src/components/Container/Partition/Arena/Arena.module.sass
@@ -1,7 +1,19 @@
-.arena_container
-  display: flex
-  flex-direction: column
-  align-items: center
-  width: 100%
-  padding: 0 calc((100% - 980px)/2) 20px
-  background-color: whitesmoke
+.arena
+  &_container
+    position: relative
+    display: flex
+    flex-direction: column
+    align-items: center
+    width: 100%
+    height: calc(100vh - 115px)
+    padding: 0 calc((100% - 980px)/2) 20px
+    z-index: 3
+    overflow: auto
+  &_overlay
+    position: absolute
+    height: calc(100% - 50px)
+    width: 1000px
+    top: 0
+    background-color: grey
+    margin: 0 calc((100% - 1000px)/2)
+    opacity: .7
