--- a/src/components/Container/Partition/Arena/Commands/Commands.module.sass
+++ b/src/components/Container/Partition/Arena/Commands/Commands.module.sass
@@ -3,46 +3,71 @@
   margin-top: 40px
   &_list
     padding: 15px 5px
-    border: 1px solid #000
     max-height: 700px
+    border: 1px solid #c1c1c1
     overflow-y: auto
 
 .title
-  text-decoration: underline
-  margin: 15px 0
+  display: inline-block
+  background-color: #c1c1c1
+  padding: 0 15px
+  margin-top: 20px
+  margin-bottom: 10px
+  border-radius: 20px
+  color: #000000
 
 .command
   &_card
+    position: relative
     display: flex
     justify-content: flex-start
-    border: 1px solid black
     height: 130px
     padding: 5px
     margin-bottom: 10px
     &:nth-child(2n)
-      background-color: #c1c1c1
+      &:before
+        opacity: .6
     &:last-child
       margin-bottom: 0
+    &:before
+      position: absolute
+      content: ''
+      top: 0
+      bottom: 0
+      right: 0
+      left: 0
+      background-color: #c1c1c1
+      opacity: .3
   &_image
     width: 100%
     height: 100%
     object-fit: cover
     &_container
+      position: relative
+      z-index: 3
       height: 100%
       width: 120px
       margin-right: 10px
   &_info
+    position: relative
+    z-index: 3
     display: flex
     flex-direction: column
     justify-content: space-between
     flex-grow: 1
   &_name
+    display: inline-block
+    background-color: #c1c1c1
+    padding: 0 15px
+    margin-bottom: 10px
+    border-radius: 20px
+    color: #000000
     font-size: 22px
-    margin-bottom: 5px
     text-decoration: none
   &_phone, &_email
     display: inline
-    color: #000
+    color: #fff
+    font-weight: bold
     text-decoration: none
 
 .social
