--- a/src/components/Container/Partition/Arena/Main/Main.module.sass
+++ b/src/components/Container/Partition/Arena/Main/Main.module.sass
@@ -1,3 +1,5 @@
+$text_color: whitesmoke
+
 .arena_content
   display: flex
   justify-content: space-between
@@ -8,6 +10,14 @@
   width: 65%
   height: 100%
   font-size: 19px
+  color: $text_color
+
+.name
+  display: inline-block
+  background-color: #c1c1c1
+  padding: 0 15px
+  border-radius: 20px
+  color: #000000
 
 .site
   margin-top: 10px
@@ -20,7 +30,7 @@
 
 .site_link
   text-decoration: none
-  color: blue
+  color: #2e519e
   &:hover
     text-decoration: underline
 
