--- a/src/components/Container/Partition/Arena/Rental/RentedHours/RentedHours.module.sass
+++ b/src/components/Container/Partition/Arena/Rental/RentedHours/RentedHours.module.sass
@@ -1,6 +1,7 @@
 .rented
   display: flex
   &_hours
+    position: sticky
     display: flex
     justify-content: space-between
     align-content: space-between
@@ -35,7 +36,7 @@
     background-color: #44944A
     transition: .3s all
     z-index: 2
-    opacity: .8
+    opacity: .9
     &:after
       content: ''
       position: absolute
@@ -64,15 +65,16 @@
       .hour_span
         background-color: darken(#44944A, 10%)
       .hour_interval
-        opacity: unset
+        opacity: .7
   &_interval
     display: flex
     flex-direction: column
     text-align: center
     position: absolute
     font-size: 12px
-    opacity: .5
     user-select: none
+    opacity: .5
+    z-index: 2
   &:nth-child(6n)
     margin-right: 0
 
