--- a/src/components/Container/Partition/Arenas/ArenaCard/ArenaCard.module.sass
+++ b/src/components/Container/Partition/Arenas/ArenaCard/ArenaCard.module.sass
@@ -1,20 +1,18 @@
 .card
   display: flex
   align-items: center
+  position: relative
   width: 100%
   height: 252px
   padding: 11px
   margin-bottom: 6px
-  border: 1px solid black
-  -webkit-border-radius: 7px
-  -moz-border-radius: 7px
+  border: 1px solid whitesmoke
   border-radius: 7px
   color: #000
   text-decoration: none
-
-.active
-  background-color: #C0A7A7
-
-
-
-
+  background-color: #c1c1c1
+  opacity: .75
+  z-index: 4
+  transition: all .5s
+  &:hover
+    opacity: .95
