--- a/src/components/Container/Partition/Arenas/Arenas.module.sass
+++ b/src/components/Container/Partition/Arenas/Arenas.module.sass
@@ -2,10 +2,20 @@
   display: flex
   justify-content: center
   width: 100%
-  height: calc(100vh - 50px)
-  background-color: whitesmoke
+  height: calc(100vh - 65px)
 
 .arenas_list
+  position: relative
   width: 780px
-  border: 1px solid black
   padding: 10px
+  margin: 5px 0
+  overflow: auto
+  z-index: 4
+  &_overlay
+    position: absolute
+    height: calc(100% - 10px)
+    width: 780px
+    background-color: grey
+    margin: 5px 0
+    border-radius: 5px
+    opacity: .7
