--- a/src/index.sass
+++ b/src/index.sass
@@ -7,3 +7,37 @@
   box-sizing: border-box
 
 $partition_text_color: whitesmoke
+
+p, a
+  color: #ffffff
+
+::-webkit-scrollbar-button
+  background-repeat: no-repeat
+  width: 5px
+  height: 0
+  margin-left: 3px
+
+::-webkit-scrollbar-track
+  display: flex
+  background-color: lighten(#2e519e, 20%)
+  width: 5px
+  padding: 2px
+
+::-webkit-scrollbar-thumb
+  -webkit-border-radius: 0
+  background-color: #2e519e
+  border-radius: 4px
+  cursor: pointer
+
+::-webkit-scrollbar-thumb:hover
+  background-color: darken(#2e519e, 10%)
+
+::-webkit-resizer
+  background-repeat: no-repeat
+  width: 4px
+  height: 0
+  margin-left: 3px
+
+::-webkit-scrollbar
+  width: 8px
+  border-radius: 4px
