created cloakroom section and redesigned itemsContainerFilter UI element

--- a/src/index.sass
+++ b/src/index.sass
@@ -11,6 +11,14 @@ $partition_text_color: whitesmoke
 p, a
   color: #ffffff
 
+.nothing
+  width: 100%
+  font-size: 25px
+  font-weight: bold
+  color: #ffffff
+  text-align: center
+  margin-top: 30px
+
 ::-webkit-scrollbar-button
   background-repeat: no-repeat
   width: 5px
