--- a/src/_stylesVariables.sass
+++ b/src/_stylesVariables.sass
@@ -3,6 +3,7 @@ $main_color: #2e519e
 $main_color_darken: darken($main_color, 10%)
 $main_color_darken_extra: darken($main_color_darken, 10%)
 $main_color_lighten: lighten($main_color, 10%)
+$main_color_lighten_extra: lighten($main_color_lighten, 10%)
 
 
 // UI styles
@@ -29,3 +30,19 @@ $search_header_height: 50px // Высота компонента "spareBench/Hea
 
 // navbar
 $navbar_height: 65px // Высота компонента "Navbar"
+
+
+
+// media
+
+
+//UI styles
+$filter_component_width_1210: 250px
+
+
+$filter_component_width_992: 210px
+
+$button_left-right_padding_992: 10px
+$button_text_font_size_992: 12px
+
+$filter_component_width_768: 300px
