--- a/src/components/Container/Partition/Cloakroom/Cloakroom.module.sass
+++ b/src/components/Container/Partition/Cloakroom/Cloakroom.module.sass
@@ -13,3 +13,11 @@
 .container
   width: 100%
   height: 100%
+
+@media (max-width: 1210px)
+  .cloakroom
+    width: 90%
+
+@media (max-width: 768px)
+  .cloakroom
+    width: 96%
