--- a/src/components/Container/Partition/SpareBench/SpareBench.module.sass
+++ b/src/components/Container/Partition/SpareBench/SpareBench.module.sass
@@ -12,3 +12,11 @@
   width: 100%
   margin-top: 5px
   height: calc( 100% - #{$search_header_height} - 5px)
+
+@media (max-width: 1210px)
+  .spare_bench
+    width: 90%
+
+@media (max-width: 768px)
+  .spare_bench
+    width: 96%
