--- a/src/components/Container/Partition/Arenas/ArenaCard/ArenaCard.module.sass
+++ b/src/components/Container/Partition/Arenas/ArenaCard/ArenaCard.module.sass
@@ -1,6 +1,7 @@
 .card
   display: flex
   align-items: center
+  justify-content: space-between
   position: relative
   width: 100%
   height: 252px
@@ -16,3 +17,25 @@
   transition: all .5s
   &:hover
     opacity: .95
+
+.slider
+  width: 230px
+  height: 230px
+
+@media (max-width: 992px)
+  .card
+    flex-direction: column
+    height: 430px
+
+  .slider
+    width: 300px
+
+@media (max-width: 576px)
+  .card
+    justify-content: unset
+    height: 450px
+
+@media (max-width: 400px)
+  .slider
+    width: 100%
+    height: 200px
