--- a/src/components/Container/Partition/Arenas/ArenaCard/ArenaInfo/ArenaInfo.module.sass
+++ b/src/components/Container/Partition/Arenas/ArenaCard/ArenaInfo/ArenaInfo.module.sass
@@ -4,9 +4,8 @@ $text_color: white
   display: flex
   flex-direction: column
   height: 100%
-  flex-grow: 1
+  width: calc(100% - 230px - 10px)
   &_container
-    flex-grow: 1
     width: 100%
     display: flex
 
@@ -29,9 +28,8 @@ $text_color: white
   display: flex
   flex-direction: column
   justify-content: space-around
-  width: 65%
+  width: 100%
   height: 100%
-  flex-grow: 1
   white-space: nowrap
   overflow: hidden
   -ms-text-overflow: ellipsis
@@ -94,7 +92,6 @@ $text_color: white
   margin-top: 10px
   white-space: nowrap
   overflow: hidden
-  -ms-text-overflow: ellipsis
   text-overflow: ellipsis
 
 .site_link
@@ -108,3 +105,46 @@ $text_color: white
     text-indent: 100%
   to
     text-indent: 0
+
+
+@media (max-width: 1110px)
+  .name
+    width: 100%
+
+
+@media (max-width: 992px)
+  .info
+    height: 160px
+    width: 90%
+    margin-top: 10px
+
+  .name
+    text-align: center
+
+  .more
+    height: unset
+
+  .working_hours
+    margin: 10px 0
+
+  .address
+    margin-top: 0
+
+  .social
+    margin-top: 0
+
+@media (max-width: 576px)
+  .map_show
+    display: none
+
+@media (max-width: 400px)
+  .info
+    width: 100%
+
+  .more
+    white-space: unset
+
+  .working_hours, .address, .site
+    white-space: unset
+    overflow: unset
+    text-overflow: unset
