--- a/src/components/Container/Partition/SpareBench/ContainerInner/ContainerInner.module.sass
+++ b/src/components/Container/Partition/SpareBench/ContainerInner/ContainerInner.module.sass
@@ -1,6 +1,6 @@
 .list
   display: flex
-  justify-content: flex-start
+  justify-content: space-between
   align-items: flex-start
   flex-wrap: wrap
   position: relative
