--- a/src/components/Container/Partition/SpareBench/ContainerInner/Players/Players.module.sass
+++ b/src/components/Container/Partition/SpareBench/ContainerInner/Players/Players.module.sass
@@ -1,3 +1,47 @@
 .player_card
-  &:last-child
+  width: 32%
+  margin-right: 1%
+  margin-top: 10px
+  &:nth-child(2n - 1):last-child
     margin-right: auto
+
+@media (max-width: 992px)
+  .player_card
+    width: 48%
+
+@media (max-width: 768px)
+  .player_card
+    width: 40%
+    margin-top: 0
+    &:nth-child(n + 3)
+      margin-top: 5px
+    &:nth-child(2n)
+      margin-right: 5%
+    &:nth-child(2n - 1)
+      margin-left: 5%
+
+@media (max-width: 660px)
+  .player_card
+    width: 44%
+    &:nth-child(2n)
+      margin-right: 4%
+    &:nth-child(2n - 1)
+      margin-left: 4%
+
+@media (max-width: 576px)
+  .player_card
+    width: 49%
+    height: 350px
+    &:nth-child(2n)
+      margin-right: 2px
+    &:nth-child(2n - 1)
+      margin-left: 0
+    &_image
+      height: 160px
+
+@media (max-width: 470px)
+  .player_card
+    width: 90%
+    margin: auto !important
+    &:nth-child(n + 2)
+      margin-top: 5px !important
